--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1446,14 +1446,35 @@
   padding-left: 0.2rem;
   padding-right: 0.85rem; }
 
-#conversejs .chat-box .box-flyout .add-contact-flyout INPUT[type=email], #conversejs .chat-box .box-flyout .search-contact-flyout INPUT[type=email] {
-  font-size: inherit; }
-  #conversejs .chat-box .box-flyout .add-contact-flyout INPUT[type=email]::-webkit-input-placeholder, #conversejs .chat-box .box-flyout .search-contact-flyout INPUT[type=email]::-webkit-input-placeholder {
+/*Style the hint text for add contact and search contact forms. Ideally, this should inherit from hint text class in ZCS. But doing this for now ...*/
+#conversejs .chatbox .box-flyout .add-contact-flyout INPUT[type=email],
+#conversejs .chatbox .box-flyout .search-contact-flyout INPUT[type=email],
+#conversejs .chatbox .box-flyout .add-contact-flyout INPUT[type=text],
+#conversejs .chatbox .box-flyout .search-contact-flyout INPUT[type=text] {
+  font-size: 1rem; }
+  #conversejs .chatbox .box-flyout .add-contact-flyout INPUT[type=email]::-webkit-input-placeholder,
+  #conversejs .chatbox .box-flyout .search-contact-flyout INPUT[type=email]::-webkit-input-placeholder,
+  #conversejs .chatbox .box-flyout .add-contact-flyout INPUT[type=text]::-webkit-input-placeholder,
+  #conversejs .chatbox .box-flyout .search-contact-flyout INPUT[type=text]::-webkit-input-placeholder {
     font-style: italic; }
-  #conversejs .chat-box .box-flyout .add-contact-flyout INPUT[type=email]::-ms-input-placeholder, #conversejs .chat-box .box-flyout .search-contact-flyout INPUT[type=email]::-ms-input-placeholder {
+  #conversejs .chatbox .box-flyout .add-contact-flyout INPUT[type=email]::-ms-input-placeholder,
+  #conversejs .chatbox .box-flyout .search-contact-flyout INPUT[type=email]::-ms-input-placeholder,
+  #conversejs .chatbox .box-flyout .add-contact-flyout INPUT[type=text]::-ms-input-placeholder,
+  #conversejs .chatbox .box-flyout .search-contact-flyout INPUT[type=text]::-ms-input-placeholder {
     font-style: italic; }
-  #conversejs .chat-box .box-flyout .add-contact-flyout INPUT[type=email]::-moz-placeholder, #conversejs .chat-box .box-flyout .search-contact-flyout INPUT[type=email]::-moz-placeholder {
+  #conversejs .chatbox .box-flyout .add-contact-flyout INPUT[type=email]::-moz-placeholder,
+  #conversejs .chatbox .box-flyout .search-contact-flyout INPUT[type=email]::-moz-placeholder,
+  #conversejs .chatbox .box-flyout .add-contact-flyout INPUT[type=text]::-moz-placeholder,
+  #conversejs .chatbox .box-flyout .search-contact-flyout INPUT[type=text]::-moz-placeholder {
     font-style: italic; }
+
+/*Style the hint text for chat input area.Ideally, this should inherit from hint text class in ZCS. But doing this for now ...*/
+#conversejs form.sendXMPPMessage .chat-textarea::-webkit-input-placeholder {
+  font-style: italic; }
+#conversejs form.sendXMPPMessage .chat-textarea::-ms-input-placeholder {
+  font-style: italic; }
+#conversejs form.sendXMPPMessage .chat-textarea::-moz-placeholder {
+  font-style: italic; }
 
 #conversejs #controlbox-tabs LI A.current {
   line-height: 25px; }
