ZCS-9073: Initial commit

--- a/WebRoot/admin_skins/carbon/skin.css
+++ b/WebRoot/admin_skins/carbon/skin.css
@@ -250,6 +250,14 @@ body									{	@ChromeBg@	}
 	padding-top:50px;
 }
 
+.ZTwoFactorMessage {
+	color:white;
+	font-size:14px !important;
+	font-weight:bold;
+	padding-bottom:20px !important;
+	text-align: center;
+}
+
 .SplashScreen .switch{
 	margin:30px 0px 60px;
 }
