ZCS-14220: added xform item types to support multiple checkboxes in a single setting

--- a/WebRoot/admin_skins/serenity/skin.css
+++ b/WebRoot/admin_skins/serenity/skin.css
@@ -623,6 +623,10 @@ TD.gridGroupBodyLabel {
 .grid_table TD TD {
 	border:0px;
 }
+.grid_table .xform_multiple_checkbox {
+	border-right:1px solid #E4E4E4;
+}
+
 .grid_composite_table,
 .grid_xform_table {
 	border-spacing:0;
